Add Travis CI build and fix debugging

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,7 +31,7 @@ android {
             debuggable true
             jniDebuggable true
             renderscriptDebuggable true
-            minifyEnabled true
+            minifyEnabled false
             zipAlignEnabled true
         }
     }
