Update Gradle and the Gradle wrapper

--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,11 @@ allprojects {
     }
 }
 
+wrapper {
+    distributionType = Wrapper.DistributionType.ALL
+    gradleVersion = "4.6"
+}
+
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
