--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,14 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
+    apply from: 'dependencies.gradle.kts'
     repositories {
         jcenter()
         maven { url 'https://plugins.gradle.org/m2/' }
-//        google()
+        maven { url 'https://maven.google.com' }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.3'
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath gradlePlugins.android
     }
 }
 
@@ -18,13 +16,13 @@ allprojects {
     repositories {
         mavenCentral()
         jcenter()
-//        google()
+        maven { url 'https://maven.google.com' }
     }
 }
 
 wrapper {
     distributionType = Wrapper.DistributionType.ALL
-    gradleVersion = "4.6"
+    gradleVersion = versions.gradle
 }
 
 task clean(type: Delete) {
