--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,7 @@ android {
         defaultConfig {
         }
     }
+
     compileSdkVersion versions.androidSdk
     buildToolsVersion "27.0.3"
     defaultConfig {
@@ -17,6 +18,7 @@ android {
             useSupportLibrary true
         }
     }
+
     buildTypes {
         release {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
@@ -26,6 +28,7 @@ android {
             minifyEnabled true
             zipAlignEnabled true
         }
+
         debug {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             debuggable true
@@ -34,6 +37,10 @@ android {
             minifyEnabled false
             zipAlignEnabled true
         }
+    }
+
+    lintOptions {
+        abortOnError false
     }
 }
 
