--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,9 +45,8 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile "com.android.support:appcompat-v7:$versions.androidSupport"
-    compile "com.android.support:design:$versions.androidSupport"
-    compile "com.android.support:support-v4:$versions.androidSupport"
-    compile "com.android.support:support-vector-drawable:$versions.androidSupport"
+    implementation "com.android.support:appcompat-v7:$versions.androidSupport"
+    implementation "com.android.support:design:$versions.androidSupport"
+    implementation "com.android.support:support-v4:$versions.androidSupport"
+    implementation "com.android.support:support-vector-drawable:$versions.androidSupport"
 }
