--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,8 +12,8 @@ android {
         applicationId "com.fake.android.torchlight"
         minSdkVersion 16
         targetSdkVersion versions.androidSdk
-        versionCode 205
-        versionName "0.02b5"
+        versionCode 206
+        versionName "2.6"
         vectorDrawables {
             useSupportLibrary true
         }
