--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,4 +49,6 @@ dependencies {
     implementation "com.android.support:design:$versions.androidSupport"
     implementation "com.android.support:support-v4:$versions.androidSupport"
     implementation "com.android.support:support-vector-drawable:$versions.androidSupport"
+
+    implementation "com.jakewharton.timber:timber:$versions.timber"
 }
