--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,4 +51,5 @@ dependencies {
     implementation "com.android.support:support-vector-drawable:$versions.androidSupport"
 
     implementation "com.jakewharton.timber:timber:$versions.timber"
+    implementation 'org.jetbrains:annotations-java5:15.0'
 }
