--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ buildscript {
     }
 
     dependencies {
-        classpath gradlePlugins.android
+        classpath(gradlePlugins.android)
     }
 }
 
