Convert root Gradle build script to Kotlin and apply Gradle Android Cache Fix plugin

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,6 @@
-apply plugin: 'com.android.application'
+apply plugin: "com.android.application"
+apply from: "../dependencies.gradle.kts"
+apply plugin: "org.gradle.android.cache-fix"
 
 android {
     signingConfigs {
