--- a/project.config
+++ b/project.config
@@ -18,3 +18,5 @@
 [access "refs/tags/*"]
 	push = group user/Kaeptm Blaubaer (kaeptmblaubaer1000)
 	push = +force group user/Kaeptm Blaubaer (kaeptmblaubaer1000)
+[project]
+	state = hidden
