--- a/gradle.properties
+++ b/gradle.properties
@@ -12,4 +12,7 @@ org.gradle.jvmargs=-XX:MaxPermSize=512m -Dfile.encoding=UTF-8
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
-#android.useDeprecatedNdk=true
+android.enableAppCompileTimeRClass=true
+android.nonTransitiveRClass=true
+android.useAndroidX=true
+android.enableJetifier=true
